# fastapi-starter

./: .env.example  .gitignore  .pre-commit-config.yaml  ENDPOINTS.md  ENPOINTS.md  pyproject.toml
alembic/: env.py
authentication/: app.py
authentication/api/: admin.py  auth.py  permissions.py  roles.py  users.py
authentication/controllers/: admin.py  auth.py
authentication/core/: __init__.py  config.py  database.py  exceptions.py  response.py
authentication/core/base/: __init__.py  database.py  model.py
authentication/core/database/: filters.py  manager.py  repository.py
authentication/core/middlewares/: __init__.py  version.py
authentication/core/routing/: __init__.py  decorators.py
authentication/core/routing/routers/: __init__.py  app.py  crud.py  file.py  version.py
authentication/core/routing/utils/: __init__.py  extractor.py
authentication/core/utils/: __init__.py
authentication/models/: permission.py  session.py  user.py  user_permission.py  verification.py
authentication/schemas/: __init__.py  auth.py  common.py  permission.py  role.py
authentication/services/: email.py  session.py
migrations/: env.py
migrations/versions/: 276812bffe1b_init.py  fa706fed48fa_init.py
templates/: email-verification.html  forgot-password.html  onboarding.html  otp.html  reset-password.html  unrecognized-login.html  verification-success.html
tests/unit/core/routing/routers/: test_crud.py
