[project]
name = "authentication"
version = "0.1.0"
description = ""
authors = [
    {name = "laww",email = "lawrenceallen.tech@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all] (>=0.120.4,<0.121.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "alembic (>=1.17.1,<2.0.0)",
    "sqlmodel (>=0.0.27,<0.0.28)",
    "classy-fastapi (>=0.7.0,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
