[project]
name = "authentication"
version = "0.1.0"
description = ""
authors = [
    {name = "laww",email = "lawrenceallen.tech@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi[all] (>=0.120.4,<0.121.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "alembic (>=1.17.1,<2.0.0)",
    "sqlmodel (>=0.0.27,<0.0.28)",
    "slowapi[redis] (>=0.1.9,<0.2.0)",
    "arrow (>=1.4.0,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "semver (>=3.0.4,<4.0.0)",
    "asgiref (>=3.10.0,<4.0.0)",
    "sa (>=0.0.4,<0.0.5)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)",
    "pre-commit (>=3.7.0,<4.0.0)",
    "ruff (>=0.6.0,<0.7.0)",
    "bandit (>=1.7.0,<2.0.0)"
]
